[tool.poetry]
name = "core-metrics-aggregator"
version = "0.1.0"
description = ""
authors = ["Yuto Takano <y.takano@sms.ed.ac.uk>"]
readme = "README.md"
packages = [{include = "core_metrics_aggregator"}]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
